zeppelin/k8s/zeppelin-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: analytics
  name: zeppelin-svc
spec:
  ports:
  - protocol: TCP
    port: 8080
    name: http
  clusterIP: None
  selector:
    app: zeppelin
---
#apiVersion: v1
#kind: Service
#metadata:
# namespace: analytics
# name: zeppelin-np
#spec:
# type: NodePort
# selector:
#  matchLabels:
#    app: zeppelin
# ports:
# - protocol: TCP
#   port: 8080
#   name: http
# clusterIP: None
